# mars

./: .code.yaml  .gitignore  .gitmodules  CONTRIBUTING.md  Copyright Notice of Boost  LICENSE  README.md  build.gradle  clang_format_ignore.txt  codecc.sh
mars/: .clang-format  CMakeLists.txt  build.gradle  build_android.py  build_ios.py  build_ios_xlog_xcframework.py  build_ohos.py  build_osx.py  build_watch.py  build_windows.py  cppcheck_project_scan.bat  cpplint_project_scan.bat  gradle.properties  ios.toolchain.cmake  log_base_buffer.cc  log_base_buffer.cpp  log_base_buffer.h  log_base_buffer.hpp  log_zstd_buffer.cc  log_zstd_buffer.h  mars_utils.py  rename_project.py  settings.gradle  simple_compression.c  streaming_decompresssion.c  streaming_decompresssion.h  wconan_build_android.py  wconan_package.yaml
mars/app/: .project  CMakeLists.txt  app.h  app_logic.cc  app_logic.h  app_manager.cc  app_manager.h  base_app_manager.h  base_context.h  compiler_util.h  context.cc  context.h
mars/app/app-mac.xcodeproj/: project.pbxproj
mars/app/app-watch.xcodeproj/: project.pbxproj
mars/app/app.xcodeproj/: project.pbxproj
mars/app/jni/: app_manager_callback_wrapper.cc  app_manager_callback_wrapper.cpp  app_manager_callback_wrapper.h  app_manager_wrapper.cc  app_manager_wrapper.cpp  build.conf  com_tencent_mars_app_AppLogic_C2Java.cc  context_wrapper.cc  import.mk  sources.mk
mars/app/src/: app_config.cc  app_config.h  traffic_statistics.cc  traffic_statistics.h
mars/app/win32proj/: app.vcxproj  app.vcxproj.filters
mars/baseevent/: .project  CMakeLists.txt  active_logic.h  app_session.h  base_config.h  base_logic.h  baseevent.h  baseevent_bridge.h  baseprjevent.h  compiler_util.h  mars.h
mars/baseevent/baseevent-mac.xcodeproj/: project.pbxproj
mars/baseevent/baseevent-watch.xcodeproj/: project.pbxproj
mars/baseevent/baseevent.xcodeproj/: project.pbxproj
mars/baseevent/src/: mars.cc  (+6 more)
mars/boost/: CMakeLists.txt  any.hpp  array.hpp  assert.hpp  atomic.hpp  bind.hpp  blank.hpp  blank_fwd.hpp  boost.vcxproj  boost.vcxproj.filters  boost_stdexcept  concept_check.hpp  cregex.hpp  cstdint.hpp  cstdlib.hpp  current_function.hpp  filesystem.hpp  foreach.hpp  foreach_fwd.hpp  function.hpp  function_equal.hpp  get_pointer.hpp  indirect_reference.hpp  integer.hpp  integer_fwd.hpp  integer_traits.hpp  io_fwd.hpp  is_placeholder.hpp  lexical_cast.hpp  limits.hpp  math_fwd.hpp  memory_order.hpp  next_prior.hpp  none.hpp  none_t.hpp  operators.hpp  pointee.hpp  rational.hpp  regex.hpp  regex_fwd.hpp  (+12 more)
mars/boot/: CMakeLists.txt  base_app_manager.h  base_context.cc  base_context.h  base_cronet_manager.h  base_event.h  base_ipxx_manager.h  base_logic_factory.h  base_logic_manager.h  base_manager.h  base_smc_manager.h  base_stn_manager.h  baseevent_bridge.h  boot.h  context.cc  context.h  manager_wrapper.cc  manager_wrapper.h  mars.h
mars/comm/: .cproject  CMakeExtraFlags.txt  CMakeLists.txt  CMakeUtils.txt  adler32.c  adler32.h  alarm.cc  alarm.h  anr.cc  anr.h  autobuffer.cc  autobuffer.h  base_app_manager.h  base_context.cc  base_context.h  base_manager.h  base_stn_manager.h  basepacker.cc  basepacker.h  boost_exception.cc  bootregister.h  bootrun.h  cache_with_timeout.h  channel.h  channel_unittest.cc  comm_data.h  comm_frequency_limit.cc  comm_frequency_limit.h  comm_util.h  compiler_util.h  copy_wrapper.h  fd_info.cc  fd_info.h  has_member.h  http.cc  http.h  ini.h  macro.h  marcotoolkit.h  md5.c  (+35 more)
mars/config/: CMakeLists.txt  config_mananger.cc  config_mananger.h
mars/googlemock/: .clang-format
mars/gradle/: WeChatArmeabiCompat.gradle  WeChatDebugStub.gradle  WeChatDebugStub2.gradle  WeChatNativeDepend.gradle  WeChatPublish.gradle  build_xlog_libraries.gradle
mars/libraries/: build_android.py  build_apple.py  build_for_win32.py  mars_utils.py
mars/lint/: Artistic Style.mhtml  Clang-Format Style Options - Clang 3.7 documentation.mhtml  cpplint.py  cpplint_error_fix.py  cpplint_project_scan.py
mars/log/: .cproject  .project  CMakeLists.txt  appender.h  build_android.sh  compiler_util.h  copy_log_export.py  xlogger_interface.h
mars/mars-log-iphone.xcodeproj/: project.pbxproj
mars/mars-log-mac.xcodeproj/: project.pbxproj
mars/mars-open-iphone.xcodeproj/: project.pbxproj
mars/mars-open-mac.xcodeproj/: project.pbxproj
mars/mars-open-watch.xcodeproj/: project.pbxproj
mars/mk_template/: android_template.mk  application_template.mk  flags.mk  import_template.mk  util.mk
mars/ohoslibraries/: export.exp
mars/openssl/: .cproject  CMakeLists.txt  e_os2.h  export.mk  sources.mk  tencent.mm.pbc.openssl.sln  tencent.mm.pbc.openssl.vcxproj
mars/pyMars/: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  setup.py
mars/sdt/: .cproject  .project  CMakeLists.txt  compiler_util.h  constants.h  netchecker_profile.h  sdt.h  sdt_logic.cc  sdt_logic.h  sdt_logic_bridge.cc  sdt_logic_bridge.h  sdt_manager.cc  sdt_manager.h
mars/stn/: .cproject  CMakeLists.txt  base_stn_manager.h  build_ios.sh  compiler_util.h  config.h  dns_profile.h  shortlink_wrapper.cc  shortlink_wrapper.h  stn.cc  stn.h  stn_callback_bridge.cc  stn_callback_bridge.h  stn_logic.cc  stn_logic.h  stn_logic_bridge.cc  stn_logic_bridge.h  stn_logic_manager.h  stn_logic_signal.h  stn_manager.cc  stn_manager.h  task_profile.h
mars/uwpproj/: cs2runtime.cpp  cs2runtime.h  mars.filters  mars.vcxproj  marsUWP.sln  platform_comm.cpp  runtime2cs.cpp  runtime2cs.h  runtime_utils.cpp  runtime_utils.h  uwpAppCallback.cpp  uwpAppCallback.h  uwpStnCallback.cpp  uwpStnCallback.h
mars/win32proj/: mars-allsource.vcxproj  mars.def  mars.opensdf  mars.sln  mars.vcxproj  mars.vcxproj.filters  merge_lib.bat  stdafx.cpp
mars/xlog/: CMakeLists.txt  appender.h  compiler_util.h  copy_log_export.py  xlogger.h  xlogger_interface.h
samples/Windows/: AboutDlg.h  CMakeLists.txt  ChatDlg.cpp  ChatDlg.h  MainDlg.cpp  MainDlg.h  PingServerDlg.cpp  PingServerDlg.h  Sample.cpp  Sample.h  Sample.rc  Sample.sln  Sample.vcxproj  Sample.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h
(+6243 files in other folders)
